test/files/neg/t8430.check
t8430.scala:17: warning: match may not be exhaustive.
It would fail on the following inputs: LetC, LetF, LetL(BooleanLit), LetL(IntLit), LetL(UnitLit), LetP
  val f0 = (tree: Tree) => tree match {case LetL(CharLit) => ??? }
                           ^
t8430.scala:18: warning: match may not be exhaustive.
It would fail on the following inputs: LetC, LetF, LetL(BooleanLit), LetL(IntLit), LetL(UnitLit), LetP
  val f1 = (tree: Tree) => tree match {case LetL(CharLit) => ??? }
                           ^
t8430.scala:19: warning: match may not be exhaustive.
It would fail on the following inputs: LetC, LetF, LetL(BooleanLit), LetL(IntLit), LetL(UnitLit), LetP
  val f2 = (tree: Tree) => tree match {case LetL(CharLit) => ??? }
                           ^
t8430.scala:20: warning: match may not be exhaustive.
It would fail on the following inputs: LetC, LetF, LetL(BooleanLit), LetL(IntLit), LetL(UnitLit), LetP
  val f3 = (tree: Tree) => tree match {case LetL(CharLit) => ??? }
                           ^
t8430.scala:21: warning: match may not be exhaustive.
It would fail on the following inputs: LetC, LetF, LetL(BooleanLit), LetL(IntLit), LetL(UnitLit), LetP
  val f4 = (tree: Tree) => tree match {case LetL(CharLit) => ??? }
                           ^
t8430.scala:22: warning: match may not be exhaustive.
It would fail on the following inputs: LetC, LetF, LetL(BooleanLit), LetL(IntLit), LetL(UnitLit), LetP
  val f5 = (tree: Tree) => tree match {case LetL(CharLit) => ??? }
                           ^
error: No warnings can be incurred under -Werror.
6 warnings
1 error
